# realworld-actix-web

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  configuration.example.yml  configuration.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml  security-audit.yml
configuration/: base.yml  local.yml  production.yml
docker/: Dockerfile  README.md  docker-compose.yml  migrations.Dockerfile  migrations.sh
migrations/: 20211205120032_create_users_table.sql  20220214110947_create_followers_table.sql
scripts/: dev_env.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: auth.rs  error.rs  mod.rs
src/domain/users/: email.rs  login_user.rs  mod.rs  new_user.rs  update_user.rs  user_login_request.rs  user_update_request.rs  username.rs
src/dtos/: mod.rs
src/dtos/profiles/: mod.rs  profile_response_dto.rs
src/dtos/users/: mod.rs  user_login_dto.rs  user_registration_dto.rs  user_response_dto.rs  user_update_dto.rs
src/handlers/: error.rs  mod.rs
src/handlers/profiles/: follow.rs  mod.rs  profile.rs  unfollow.rs
src/handlers/users/: login.rs  mod.rs  register.rs  update.rs  user_info.rs
src/middlewares/: auth.rs  mod.rs
src/models/: auth.rs  error.rs  mod.rs  users.rs
src/models/users/: mod.rs  user.rs  user_login.rs  user_registration.rs  user_response.rs  user_update.rs
src/repositories/: followers_repository.rs  mod.rs  user_repository.rs
src/services/: health_check.rs  mod.rs
src/services/users/: mod.rs  register.rs
tests/: remove_me.rs
tests/api/: health_check.rs  helpers.rs  main.rs
tests/api/profiles/: follow.rs  mod.rs  profile.rs  unfollow.rs
tests/api/users/: login.rs  mod.rs  register.rs  update.rs  user_info.rs
