[package]
name = "realworld-actix-web"
version = "0.1.0"
authors = ["Luca Corrieri <luca.corrieri@epita.fr>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/corrieriluca/realworld-actix-web"
license-file = "./LICENSE"

[lib]
path = "src/lib.rs"
name = "conduit"

[[bin]]
path = "src/main.rs"
name = "conduit"

[dependencies]
actix-web = "4.0.0-rc.1"
sqlx = { version = "0.5.10", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "offline",
] }

config = { version = "0.11.0", features = ["yaml"], default-features = false }
mime = "0.3.16"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
serde = "1.0.136"
serde-aux = "3.0.1"
sha3 = "0.10.0"
jsonwebtoken = "7.2.0"
validator = "0.14.0"
time = "0.3.7"

[dev-dependencies]
actix-rt = "2.6.0"
claim = "0.5.0"
fake = "2.4.3"
reqwest = "0.11.9"
serde_json = "1.0.78"
tokio = "1.16.1"
uuid = { version = "0.8.2", features = ["v4"] }

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
