[package]
name = "realworld-actix-web"
version = "0.1.0"
authors = ["Luca Corrieri <luca.corrieri@epita.fr>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/corrieriluca/realworld-actix-web"
license-file = "./LICENSE"

[lib]
path = "src/lib.rs"
name = "conduit"

[[bin]]
path = "src/main.rs"
name = "conduit"

[dependencies]
actix-web = "4.1.0"
sqlx = { version = "0.6.0", features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "offline",
] }

config = { version = "0.13.1", features = ["yaml"], default-features = false }
mime = "0.3.16"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
serde = "1.0.137"
serde-aux = "3.0.1"
sha3 = "0.10.1"
jsonwebtoken = "8.1.1"
validator = "0.15.0"
time = "0.3.9"

[dev-dependencies]
actix-rt = "2.7.0"
claim = "0.5.0"
fake = "2.5.0"
reqwest = "0.11.11"
serde_json = "1.0.81"
tokio = "1.19.2"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
